Commit work on th navigationa and home section

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -29,3 +29,69 @@ main {
     @apply text-[4rem] font-bold;
   }
 }
+.main-wrapper {
+  @apply flex flex-col items-center px-4;
+}
+.header-wrapper {
+  @apply z-[999] relative;
+  &-fixed {
+    @apply fixed top-0 left-1/2 h-[4.5rem] w-full rounded-none border border-white border-opacity-40 bg-white bg-opacity-80 shadow-lg shadow-black/[0.03] backdrop-blur-[0.5rem] sm:top-6 sm:h-[3.25rem] sm:w-[36rem] sm:rounded-full dark:bg-gray-950 dark:border-black/40 dark:bg-opacity-75;
+  }
+  &-nav {
+    @apply flex fixed top-[0.15rem] left-1/2 h-12 -translate-x-1/2 py-2 sm:top-[1.7rem] sm:h-[initial] sm:py-0;
+    .nav-container {
+      @apply flex w-[22rem] flex-wrap items-center justify-center gap-y-1 text-[0.9rem] font-medium text-gray-500 sm:w-[initial] sm:flex-nowrap sm:gap-5;
+      &-content {
+        @apply h-3/4 flex items-center justify-center relative;
+        &--link {
+          @apply flex w-full items-center justify-center px-3 py-3 hover:text-gray-950 transition dark:text-gray-500 dark:hover:text-gray-300;
+          &--clicklink {
+            @apply text-gray-950 dark:text-gray-200;
+          }
+          .nav-activelink {
+            @apply bg-gray-100 rounded-full absolute inset-0 -z-10 dark:bg-gray-800;
+          }
+        }
+      }
+    }
+  }
+}
+.intro-wrapper {
+  @apply mb-28 max-w-[50rem] text-center sm:mb-0 scroll-mt-[100rem];
+  &-container {
+    @apply flex items-center justify-center;
+    &-content {
+      @apply relative;
+      .intro-content--img {
+        @apply h-24 w-24 rounded-full object-cover border-[0.35rem] border-white shadow-xl;
+      }
+      .intro-content--emoji {
+        @apply absolute bottom-0 right-0 text-2xl;
+      }
+    }
+  }
+  &--header {
+    @apply mb-10 mt-4 px-4 text-2xl font-medium !leading-[1.5] sm:text-3xl;
+  }
+  &-contact {
+    @apply flex flex-col sm:flex-row items-center justify-center gap-2 px-4 text-lg font-medium;
+    .contact-page {
+      @apply bg-gray-900 text-white px-5 py-2 flex items-center gap-2 rounded-full outline-none focus:scale-95 hover:scale-95 hover:bg-gray-950 active:scale-105 transition;
+      &-icon {
+        @apply opacity-70 group-hover:translate-x-1 transition;
+      }
+    }
+    .contact-download {
+      @apply bg-white px-7 py-3 flex items-center gap-2 rounded-full outline-none focus:scale-105 hover:scale-95 active:scale-105 transition cursor-pointer border-gray-950 dark:bg-white/10;
+      &-icon {
+        @apply opacity-60 group-hover:translate-y-1 transition;
+      }
+    }
+    .contact-linkedln {
+      @apply bg-white p-4 text-gray-700 hover:text-gray-950 flex items-center gap-2 rounded-full focus:scale-95 hover:scale-95 active:scale-105 transition cursor-pointer border-gray-900 dark:bg-white/10 dark:text-white/60;
+    }
+    .contact-github {
+      @apply bg-white p-4 text-gray-700 flex items-center gap-2 text-[1.35rem] rounded-full focus:scale-95 hover:scale-95 hover:text-gray-950 active:scale-100 transition cursor-pointer border-gray-950 dark:bg-white/10 dark:text-white/60;
+    }
+  }
+}
