--- a/app/globals.scss
+++ b/app/globals.scss
@@ -28,9 +28,15 @@ main {
   h1 {
     @apply text-[4rem] font-bold;
   }
+  .section-header {
+    @apply font-poppins700 text-2xl font-medium capitalize mb-8 text-center;
+  }
 }
 .main-wrapper {
   @apply flex flex-col items-center px-4;
+}
+.divider-wrapper {
+  @apply bg-gray-200 my-12 h-8 w-1 rounded-full hidden sm:block dark:bg-opacity-20;
 }
 .header-wrapper {
   @apply z-[999] relative;
@@ -45,11 +51,11 @@ main {
         @apply h-3/4 flex items-center justify-center relative;
         &--link {
           @apply flex w-full items-center justify-center px-3 py-3 hover:text-gray-950 transition dark:text-gray-500 dark:hover:text-gray-300;
-          &--clicklink {
-            @apply text-gray-950 dark:text-gray-200;
-          }
-          .nav-activelink {
-            @apply bg-gray-100 rounded-full absolute inset-0 -z-10 dark:bg-gray-800;
+          &-active {
+            @apply text-gray-800 dark:text-gray-200;
+            .nav-activelink {
+              @apply bg-gray-300 rounded-full absolute inset-0 -z-10 dark:bg-gray-800;
+            }
           }
         }
       }
@@ -92,6 +98,33 @@ main {
     }
     .contact-github {
       @apply bg-white p-4 text-gray-700 flex items-center gap-2 text-[1.35rem] rounded-full focus:scale-95 hover:scale-95 hover:text-gray-950 active:scale-100 transition cursor-pointer border-gray-950 dark:bg-white/10 dark:text-white/60;
+    }
+  }
+}
+.about-wrapper {
+  @apply mb-28 max-w-[45rem] text-center leading-8 sm:mb-40 scroll-mt-28;
+}
+.projects-wrapper {
+  @apply scroll-mt-28 mb-28;
+  .project-container {
+    @apply mb-3 sm:mb-8 last:mb-0;
+    &-wrapper {
+      @apply bg-gray-100 max-w-[42rem] border border-black/5 rounded-lg overflow-hidden sm:pr-8 relative sm:h-[22rem] hover:bg-gray-200 transition sm:group-even:pl-8 dark:text-white dark:bg-white/10 dark:hover:bg-white/20;
+      .project-profile {
+        @apply pt-4 pb-7 px-5 sm:pl-10 sm:pr-2 sm:pt-10 sm:max-w-[50%] flex flex-col h-full sm:group-even:ml-[18rem];
+        &--header {
+          @apply font-inter text-xl font-bold;
+        }
+        &--description {
+          @apply mt-2 text-sm sm:text-base leading-relaxed text-gray-700 dark:text-white/70;
+        }
+        &-listcontent {
+          @apply flex flex-wrap mt-4 gap-2 sm:mt-auto;
+        }
+        .project-list {
+          @apply bg-black/[0.7] px-3 py-1 text-[0.7rem] uppercase tracking-wider text-white rounded-full dark:text-white/70;
+        }
+      }
     }
   }
 }
