Commit implementation of the Skills section and made modification on the Header

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -128,3 +128,12 @@ main {
     }
   }
 }
+.skills-wrapper {
+  @apply mb-28 max-w-[53rem] scroll-mt-28 text-center sm:mb-40;
+  &-ul {
+    @apply flex flex-wrap justify-center gap-2;
+    .skill-item {
+      @apply font-inter text-base text-gray-800 bg-white border border-black/10 rounded-xl px-5 py-3 dark:bg-white/10 dark:text-white/80;
+    }
+  }
+}
